--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,28 @@
+:root {
+  --black-color: #000;
+  --gold-color: #dabb10;
+  --grey-color: #808080;
+  --light-grey: #d3d3d3;
+  --light-black: #302c2c;
+  --white-color: #fff;
+  --dark-white: #aa9e9e;
+  --red-color : #ff0000;
+  --lightblue-color: #81bef0;
+  --font-one: 1rem;
+  --font-one-point-two: 1.2rem;
+  --font-one-and-half: 1.5rem;
+  --font-one-point-seven : 1.7rem;
+  --font-two: 2rem;
+  --font-two-and-half: 2.5rem;
+  --font-bold: 700;
+  --font-bolder: 800;
+  --font-boldest: 900;
+
+}
+
 body {
   margin: 0;
+  padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
